Hide KillerItem from non-trusted players, move to different injector